--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,15 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read file\n",
     "def read_file(file_name:str)->list[dict]:\n",
     "    '''\n",
-    "    file_name format: json\n",
+    "    read the file \n",
+    "    \n",
+    "    args:\n",
+    "        file_name:str, json format\n",
     "    '''\n",
+    "    \n",
     "    data =[]\n",
     "    with open(file_name,'rt') as f:\n",
     "        for line in f:\n",
@@ -62,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,16 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reconstruct_wiki_list(museum:dict[str,str])->dict[str,dict]:\n",
+    "    ''' \n",
+    "    reconstruct wiki list to set the museum as key\n",
+    "    \n",
+    "    args:\n",
+    "        museum:dict[str,str], directly from wiki_list\n",
+    "    '''\n",
+    "    \n",
     "    new_museum = {}\n",
     "    for key,value in museum.items():\n",
     "        key = key.lower()\n",
     "        if 'name' in key:\n",
-    "            name = value[0]\n",
+    "            name = value[1]  #use url as key, since some museums share the same name but are actually different\n",
     "        if key in ['museum_state']:\n",
     "            new_museum[key] = value\n",
     "        elif 'image' in key:\n",
@@ -157,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +239,7 @@
     "\n",
     "for museum in new_wiki_articles:\n",
     "    try:\n",
-    "        museum.update(new_wiki_list[museum['museum_name']])\n",
+    "        museum.update(new_wiki_list[museum['museum_url']])\n",
     "    except KeyError:\n",
     "        print(museum)\n",
     "    \n",
@@ -255,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,30 +352,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./data_1101/museum_wiki_metadata2.jsol','wt') as f:\n",
-    "    for museum in museum_wiki_metadata2:\n",
-    "        f.write(json.dumps(museum)+'\\n')"
+    "# drop duplicates\n",
+    "unique_dict = {(museum['museum_name'],museum['museum_url']):museum for museum in museum_wiki_metadata2}\n",
+    "new_museum_wiki_metadata2 = [value for key,value in unique_dict.items()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./data_1101/museum_wiki_metadata3.jsonl','wt') as f:\n",
+    "    idx = 0\n",
+    "    for museum in new_museum_wiki_metadata2:\n",
+    "        museum['museum_id'] = idx\n",
+    "        f.write(json.dumps(museum)+'\\n')\n",
+    "        idx +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "museum_wiki_metadata =[]\n",
-    "with open('./data_1101/museum_wiki_metadata2.jsol','rt') as f:\n",
+    "with open('./data_1101/museum_wiki_metadata3.jsonl','rt') as f:\n",
     "    for line in f:\n",
     "        museum_wiki_metadata.append(json.loads(line))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,9 +405,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/py3.12.3/lib/python3.12/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:13: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    }
+   ],
    "source": [
     "from sentence_transformers import SentenceTransformer, util\n",
     "\n",
@@ -413,14 +447,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5741/5741 [00:47<00:00, 120.10it/s]\n"
+      "/opt/anaconda3/envs/py3.12.3/lib/python3.12/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n",
+      "100%|██████████| 5716/5716 [00:45<00:00, 125.88it/s]\n"
      ]
     }
    ],
@@ -440,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,18 +500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "count = list(zip(count.keys(),count.values()))\n",
     "sorted_count = sorted(count,key = lambda x:x[1],reverse =  True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +519,7 @@
        "47"
       ]
      },
-     "execution_count": 494,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
